Updated project files for 1.0.17 release

--- a/PInvoke/NetListMgr/Vanara.PInvoke.NetListMgr.csproj
+++ b/PInvoke/NetListMgr/Vanara.PInvoke.NetListMgr.csproj
@@ -25,10 +25,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Structures
-NLM_DATAPLAN_STATUS, NLM_SIMULATED_PROFILE_INFO, NLM_SOCKADDR, NLM_USAGE_DATA
+NLM_DATAPLAN_STATUS, NLM_SIMULATED_PROFILE_INFO, NLM_USAGE_DATA
 
 Interfaces
-IEnumNetworkConnections, IEnumNetworks, INetwork, INetworkConnection, INetworkConnectionCost, INetworkCostManager, INetworkListManager
+IEnumNetworkConnections, IEnumNetworks, INetwork, INetworkConnection, INetworkConnectionCost, INetworkConnectionCostEvents, INetworkConnectionEvents, INetworkCostManager, INetworkCostManagerEvents, INetworkEvents, INetworkListManager, INetworkListManagerEvents
 
 </PackageReleaseNotes>
   </PropertyGroup>
