Updated project files for 1.0.17

--- a/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
+++ b/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-PathFindOnPathA, PathFindOnPathW, SHCreateStreamOnFileEx
+PathCompactPathExA, PathCompactPathExW, PathFindOnPathA, PathFindOnPathW, SHCreateStreamOnFileEx
 
 Interfaces
 IQueryAssociations
