--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Shell\ShellFolderTests.cs" />
     <Compile Include="Shell\ShellItemPropStoreTests.cs" />
     <Compile Include="System\BackgroundCopyTests.cs" />
+    <Compile Include="System\RegTests.cs" />
     <Compile Include="System\NetworkListTests.cs" />
     <Compile Include="System\VirtualDiskTests.cs" />
     <Compile Include="UI\Controls\NetworkConnectionDialogTests.cs" />
