--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -110,10 +110,12 @@
     <Compile Include="System\RegTests.cs" />
     <Compile Include="System\NetworkListTests.cs" />
     <Compile Include="System\VirtualDiskTests.cs" />
-    <Compile Include="UI\Controls\NetworkConnectionDialogTests.cs" />
+    <Compile Include="UI\Dialogs\AccessControlEditorTests.cs" />
+    <Compile Include="UI\Dialogs\TaskDialogTests.cs" />
+    <Compile Include="UI\Dialogs\NetworkConnectionDialogTests.cs" />
     <Compile Include="UI\VisualThemeTests.cs" />
-    <Compile Include="UI\Controls\ImageListTests.cs" />
-    <Compile Include="UI\Controls\CredentialsDialogTests.cs" />
+    <Compile Include="UI\Extensions\ImageListTests.cs" />
+    <Compile Include="UI\Dialogs\CredentialsDialogTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
