Made conversion operator from GenericSafeHandle to IntPtr explicit to minimize unintended conversions (#12) and updated all affected functions, including fixing those affected by unintended consequences.

--- a/PInvoke/Security/Vanara.PInvoke.Security.csproj
+++ b/PInvoke/Security/Vanara.PInvoke.Security.csproj
@@ -54,6 +54,7 @@ INHERITED_FROM, TRUSTEE, LSA_OBJECT_ATTRIBUTES, LSA_STRING, LSA_TRANSLATED_NAME,
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
