--- a/Security/Vanara.Security.csproj
+++ b/Security/Vanara.Security.csproj
@@ -23,7 +23,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-AccessControlHelper, AccountPrivileges, AccountUtils, ActiveDirectoryExtension, BadValueException, ClaimValue, LogonRights, PinnedAcl, PinnedSid, PrivilegeAndAttributes, PrivilegedCodeBlock, PrivilegeExtension, SystemAccountInfo, SystemSecurity, UAC, WindowsImpersonatedIdentity
+AccessControlHelper, AccountPrivileges, AccountUtils, ActiveDirectoryExtension, BadValueException, ClaimValue, LogonRights, PinnedAcl, PinnedSecurityDescriptor, PinnedSid, PrivilegeAndAttributes, PrivilegedCodeBlock, PrivilegeExtension, SystemAccountInfo, SystemSecurity, UAC, WindowsImpersonatedIdentity
 
 Enumerations
 AccountLogonRights, DesiredAccess, SystemPrivilege
