Changed project builds to use latest C# minor version

--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -39,6 +39,7 @@ Enumerations
 CorrepsondingAction, StringListPackMethod
 
 </PackageReleaseNotes>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
