--- a/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
+++ b/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
@@ -34,6 +34,7 @@ Interfaces
 IImageList, IImageList2
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
     <ApplicationManifest>Library.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
