--- a/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
+++ b/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
@@ -31,6 +31,7 @@ Structures
 PSEC_WINNT_CREDUI_CONTEXT_VECTOR, PSEC_WINNT_CREDUI_CONTEXT, CREDUI_INFO
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
