--- a/PInvoke/IpHlpApi/Vanara.PInvoke.IpHlpApi.csproj
+++ b/PInvoke/IpHlpApi/Vanara.PInvoke.IpHlpApi.csproj
@@ -31,6 +31,7 @@ Structures
 IP_ADAPTER_ANYCAST_ADDRESS, IP_ADAPTER_DNS_SERVER_ADDRESS, IP_ADAPTER_DNS_SUFFIX, IP_ADAPTER_GATEWAY_ADDRESS, IP_ADAPTER_INDEX_MAP, IP_ADAPTER_INFO, IP_ADAPTER_MULTICAST_ADDRESS, IP_ADAPTER_PREFIX, IP_ADAPTER_UNICAST_ADDRESS, IP_ADAPTER_WINS_SERVER_ADDRESS, IP_ADDR_STRING, IP_PER_ADAPTER_INFO, MIB_IFROW, MIB_IPADDRROW, MIB_IPFORWARDROW, MIB_IPNETROW, MIB_TCP6ROW, MIB_TCP6ROW_OWNER_MODULE, MIB_TCP6ROW_OWNER_PID, MIB_TCPROW, MIB_TCPROW_OWNER_MODULE, MIB_TCPROW_OWNER_PID, MIB_TCPROW2, MIB_TCPSTATS, MIB_TCPSTATS2, MIB_UDP6ROW, MIB_UDP6ROW_OWNER_MODULE, MIB_UDP6ROW_OWNER_PID, MIB_UDPROW, MIB_UDPROW_OWNER_MODULE, MIB_UDPROW_OWNER_PID, NET_LUID, FIXED_INFO, IP_ADAPTER_ADDRESSES, IP_ADDRESS_PREFIX, MIB_ANYCASTIPADDRESS_ROW, MIB_IF_ROW2, MIB_IFSTACK_ROW, MIB_INVERTEDIFSTACK_ROW, MIB_IP_NETWORK_CONNECTION_BANDWIDTH_ESTIMATES, MIB_IPFORWARD_ROW2, MIB_IPINTERFACE_ROW, MIB_IPNET_ROW2, MIB_IPPATH_ROW, MIB_MULTICASTIPADDRESS_ROW, MIB_UNICASTIPADDRESS_ROW, NL_BANDWIDTH_INFORMATION, NL_INTERFACE_OFFLOAD_ROD, SCOPE_ID, IN_ADDR, IN6_ADDR, SOCKADDR_IN, SOCKADDR_IN6, SOCKADDR_IN6_PAIR, SOCKADDR_INET, SOCKET_ADDRESS
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
