--- a/PInvoke/NTDSApi/Vanara.PInvoke.NTDSApi.csproj
+++ b/PInvoke/NTDSApi/Vanara.PInvoke.NTDSApi.csproj
@@ -31,6 +31,7 @@ Structures
 DS_NAME_RESULT, DS_NAME_RESULT_ITEM
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
