--- a/PInvoke/NTDll/Vanara.PInvoke.NTDll.csproj
+++ b/PInvoke/NTDll/Vanara.PInvoke.NTDll.csproj
@@ -31,6 +31,7 @@ Structures
 IO_STATUS_BLOCK, KEY_BASIC_INFORMATION, KEY_FULL_INFORMATION, KEY_NAME_INFORMATION, KEY_NODE_INFORMATION, OBJECT_ATTRIBUTES, UNICODE_STRING, LDR_DLL_NOTIFICATION_DATA, SYSTEM_BASIC_INFORMATION, SYSTEM_REGISTRY_QUOTA_INFORMATION, SYSTEM_PROCESSOR_PERFORMANCE_INFORMATION, SYSTEM_PROCESS_INFORMATION, SYSTEM_THREAD_INFORMATION, CLIENT_ID
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
