--- a/PInvoke/NetListMgr/Vanara.PInvoke.NetListMgr.csproj
+++ b/PInvoke/NetListMgr/Vanara.PInvoke.NetListMgr.csproj
@@ -31,6 +31,7 @@ Interfaces
 IEnumNetworkConnections, IEnumNetworks, INetwork, INetworkConnection, INetworkConnectionCost, INetworkConnectionCostEvents, INetworkConnectionEvents, INetworkCostManager, INetworkCostManagerEvents, INetworkEvents, INetworkListManager, INetworkListManagerEvents
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
