--- a/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
+++ b/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
@@ -34,6 +34,7 @@ Interfaces
 IQueryAssociations
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
