--- a/PInvoke/User32.Gdi/Vanara.PInvoke.User32.Gdi.csproj
+++ b/PInvoke/User32.Gdi/Vanara.PInvoke.User32.Gdi.csproj
@@ -31,6 +31,7 @@ Structures
 ICONINFO, NMHDR, MINMAXINFO, WINDOWPOS, GRPICONDIR, GRPICONDIRENTRY
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
