--- a/PInvoke/UxTheme/Vanara.PInvoke.UxTheme.csproj
+++ b/PInvoke/UxTheme/Vanara.PInvoke.UxTheme.csproj
@@ -31,6 +31,7 @@ Structures
 DTTOPTS, INTLIST, MARGINS, TA_TIMINGFUNCTION, TA_TRANSFORM, WTA_OPTIONS, DTBGOPTS, BP_ANIMATIONPARAMS, BP_PAINTPARAMS
 
 </PackageReleaseNotes>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
