Updated project files for 2.0 release

--- a/PInvoke/WinINet/Vanara.PInvoke.WinINet.csproj
+++ b/PInvoke/WinINet/Vanara.PInvoke.WinINet.csproj
@@ -28,7 +28,7 @@ Functions
 InternetCloseHandle, InternetConnectA, InternetConnectW, InternetOpenA, InternetOpenW, InternetQueryOptionA, InternetQueryOptionW, InternetSetOptionA, InternetSetOptionW, InternetSetStatusCallback, LaunchInternetControlPanelA
 
 Structures
-HTTP_VERSION_INFO, INTERNET_CACHE_TIMESTAMPS, INTERNET_CERTIFICATE_INFO, INTERNET_DIAGNOSTIC_SOCKET_INFO, INTERNET_PER_CONN_OPTION, INTERNET_PER_CONN_OPTION_LIST, INTERNET_PER_CONN_OPTION_Value, INTERNET_PROXY_INFO, INTERNET_VERSION_INFO
+HTTP_VERSION_INFO, INTERNET_CACHE_TIMESTAMPS, INTERNET_CERTIFICATE_INFO, INTERNET_DIAGNOSTIC_SOCKET_INFO, INTERNET_PER_CONN_OPTION, INTERNET_PER_CONN_OPTION_LIST, INTERNET_PROXY_INFO, INTERNET_VERSION_INFO, INTERNET_PER_CONN_OPTION_Value
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
