--- a/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
+++ b/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-BitBlt, CreateBrushIndirect, CreateCompatibleDC, CreateDIBPatternBrush, CreateDIBPatternBrushPt, CreateDIBSection, CreateHatchBrush, CreatePatternBrush, CreatePen, CreatePenIndirect, CreateSolidBrush, DeleteDC, DeleteObject, ExtCreatePen, GdiAlphaBlend, GdiFlush, GdiTransparentBlt, GetBrushOrgEx, GetDeviceCaps, GetDIBits, GetObjectA, GetObjectW, GetSysColorBrush, LPtoDP, PatBlt, SelectObject, SetBkMode, SetBrushOrgEx, SetLayout
+BitBlt, CreateBrushIndirect, CreateCompatibleDC, CreateDIBPatternBrush, CreateDIBPatternBrushPt, CreateDIBSection, CreateEnhMetaFileA, CreateEnhMetaFileW, CreateHatchBrush, CreatePatternBrush, CreatePen, CreatePenIndirect, CreateSolidBrush, DeleteDC, DeleteEnhMetaFile, DeleteObject, ExtCreatePen, GdiAlphaBlend, GdiFlush, GdiTransparentBlt, GetBrushOrgEx, GetDeviceCaps, GetDIBits, GetEnhMetaFileA, GetEnhMetaFileW, GetObjectA, GetObjectW, GetSysColorBrush, LPtoDP, PatBlt, SelectObject, SetBkMode, SetBrushOrgEx, SetLayout
 
 Structures
 BITMAP, BITMAPINFO, BITMAPINFOHEADER, DIBSECTION, RGBQUAD, BLENDFUNCTION, LOGBRUSH, EXTLOGPEN, LOGPEN, TEXTMETRIC
