--- a/WIndows.Forms/Vanara.Windows.Forms.csproj
+++ b/WIndows.Forms/Vanara.Windows.Forms.csproj
@@ -29,7 +29,7 @@ Structures
 TaskDialogResult
 
 Enumerations
-BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, CollapsiblePanelHeaderState, ColorProperty, ControlState, Corners, EnumProperty, FilenameProperty, Flip3DWindowPolicy, FolderBrowserDialogOptions, FontProperty, IntProperty, KnownFolder, MarginsProperty, MetricProperty, NonClientRenderingPolicy, PartSize, PositionProperty, ProgressBarState, PropertyOrigin, RectangleProperty, RenderStyle, SecurityPageType, ShellProgressDialogStyle, SizeMode, StringProperty, TaskDialogButtonDisplay, TaskDialogCommonButtons, TaskDialogIcon
+BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, CollapsiblePanelHeaderState, ColorProperty, ControlState, Corners, EnumProperty, FilenameProperty, Flip3DWindowPolicy, FolderBrowserDialogOptions, FontProperty, IconSize, IntProperty, KnownFolder, MarginsProperty, MetricProperty, NonClientRenderingPolicy, PartSize, PositionProperty, ProgressBarState, PropertyOrigin, RectangleProperty, RenderStyle, SecurityPageType, ShellProgressDialogStyle, SizeMode, StringProperty, TaskDialogButtonDisplay, TaskDialogCommonButtons, TaskDialogIcon
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
